updated todo added real versioning

--- a/templates/index.html
+++ b/templates/index.html
@@ -474,7 +474,7 @@
           <div class="pref-section about-section">
             <div class="about-logo"><i class="fas fa-home fa-3x"></i></div>
             <h3>LAN Index Dashboard</h3>
-            <p class="about-version">Version 0.1.641</p>
+            <p class="about-version">Version {{.AppVersion}}</p>
             <p class="about-desc">A personal dashboard for monitoring your system, weather, GitHub activity, and more.</p>
             <div class="about-links">
               <a href="https://github.com/Earentir/homepage" target="_blank" rel="noreferrer"><i class="fab fa-github"></i> Source Code</a>
